[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]

embassy-stm32 = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", branch = "main", features = [ "defmt", "stm32f103c8", "unstable-pac", "memory-x", "time-driver-any" ]  }
embassy-sync = { version = "0.7.2", git = "https://github.com/embassy-rs/embassy", branch = "main", features = ["defmt"] }
embassy-executor = { version = "0.9.0", git = "https://github.com/embassy-rs/embassy", branch = "main", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy", branch = "main", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.5.1", git = "https://github.com/embassy-rs/embassy", branch = "main", features = ["defmt"] }
embassy-futures = { version = "0.1.2", git = "https://github.com/embassy-rs/embassy", branch = "main"}

embedded-io-async = { version = "0.6.1" }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
static_cell = "2.0.0"
scpi = "1.0.1"
embedded-alloc = "0.6.0"


[profile.release]
opt-level="s"
lto = "fat"

[profile.dev]
debug = 2
opt-level="s"
lto = "fat"

